# OSS-Pulse

./: .gitignore  README.md  app.py  convert_to_parquet.py  deduplicate_pocketbase.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboard/: data_loader.py  visualizations.py
dashboard/assets/: style.css
dashboard/components/: executive_summary.py  filters.py  metrics_display.py  sidebar.py
dashboard/data_processing/: cleaner.py  fetch_data.py  pocketbase_config.py  transformer.py
dashboard/data_processing/data/: issues_data.parquet  repo_data.parquet
data_collection/: data_inserter.py  github_api.py
data_processing/: cleaner.py  transformer.py
scheduler/: apscheduler_config.py  job_scheduler.py
tests/: test_data_collection.py  test_data_processing.py
